# boilerplate-cpp

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  ENCRYPTION_KEY  README.md  azure-pipelines-template.yml  azure-pipelines.yml  package.json
.circleci/: config.yml
.github/workflows/: build.yml
app/: index.html
docs/: architecture.md  custom_protocol.md  native_bindings.md
scripts/: asar.js  bin2c.js  bootstrap.js  build.js  common.js  dist.js  download_libyue.js  pack.js  package.js  run.js
src/: CMakeLists.txt  bin2c.c  exe.rc  exe_manifest.xml  main.cc
tools/: append.c  bin2c.c
